🔧 Fix case sensitiviy & discover name text wrap

--- a/styles/modules/DiscoverProfiles.module.scss
+++ b/styles/modules/DiscoverProfiles.module.scss
@@ -57,7 +57,7 @@
         top: 15px;
         right: 0px;
         text-align: end;
-        width: 80%;
+        width: 50%;
         float: right;
     }
 
@@ -77,6 +77,7 @@
     color: $text;
     font-size: .9rem;
 }
+
 
 @media screen and (max-width: 1500px){
     .upper {
