--- a/styles/modules/ProfileBox.module.scss
+++ b/styles/modules/ProfileBox.module.scss
@@ -20,7 +20,16 @@
     display: flex;
     flex-flow: column;
     align-items: center;
+    > h3 {
+        color: white;
+        font-size: 2rem;
+    }
+    > h4 {
+        color: $text;
+        font-size: 1.2rem;
+    }
 }
+
 .banner {
     border-radius: 20px 20px 0px 0px;
     object-fit: cover;
@@ -215,7 +224,6 @@
     height: 180px;
     border-radius: 50%;
 }
-
 
 .button {
     position: absolute;
